--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-three-fiber": "^3.0.8",
+    "react-useportal": "^1.0.13",
+    "styled-components": "^4.4.1",
+    "three": "^0.110.0",
+    "three-full": "^17.1.0",
+    "use-global-hook": "^0.1.12",
+    "zustand": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "raw-loader": "^3.1.0"
   }
 }
