--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "loti-request": "^0.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-three-fiber": "^3.0.8",
+    "react-three-gui": "^0.1.5",
     "react-useportal": "^1.0.13",
     "styled-components": "^4.4.1",
     "three": "^0.110.0",
