--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "dependencies": {
     "loti-request": "^0.6.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-three-fiber": "^3.0.8",
+    "react-scripts": "^3.3.0",
+    "react-three-fiber": "^4.0.0",
     "react-three-gui": "^0.1.5",
     "react-useportal": "^1.0.13",
-    "styled-components": "^4.4.1",
-    "three": "^0.110.0",
+    "styled-components": "^5.0.0",
+    "three": "^0.112.1",
     "three-full": "^17.1.0",
     "use-global-hook": "^0.1.12",
-    "zustand": "^2.2.1"
+    "zustand": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "raw-loader": "^3.1.0"
+    "raw-loader": "^4.0.0"
   }
 }
