--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "loti-request": "^0.6.0",
     "pngjs": "^3.4.0",
     "react": "^16.12.0",
@@ -40,7 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.19",
+    "@types/react-color": "^3.0.1",
+    "@types/styled-components": "^4.4.2",
     "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0"
+    "raw-loader": "^4.0.0",
+    "typescript": "^3.7.5"
   }
 }
