--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "loti-request": "^0.6.0",
     "pngjs": "^3.4.0",
     "react": "^16.12.0",
+    "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-spring": "next",
     "react-three-fiber": "^4.0.0",
-    "react-three-gui": "^0.1.5",
+    "react-use-gesture": "^7.0.0",
     "react-useportal": "^1.0.13",
     "styled-components": "^5.0.0",
     "three": "^0.112.1",
