--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,8 @@
 on: workflow_dispatch
 name: Depoloy FPB5
 jobs:
-  name: build-and-publish
+  build-and-publish:
+  name: Build and publish
   runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v2
