--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          CI: false
 
       - uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
