--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: sebastianpopp/ftp-action@v2.0.0
         with:
           host: 160.153.132.207
-          user: fpb
+          user: fpb@fantham.co.uk
           password: ${{ secrets.FTP_PASSWORD }}
           localDir: build
