--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "loti-request": "^0.6.0",
     "pngjs": "^3.4.0",
-    "react": "^16.12.0",
-    "react-color": "^2.18.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "react": "^17.0.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
     "react-spring": "next",
-    "react-three-fiber": "^4.0.12",
+    "react-three-fiber": "^5.3.19",
     "react-use-gesture": "^7.0.0",
     "react-useportal": "^1.0.13",
-    "styled-components": "^5.0.0",
-    "three": "^0.112.1",
+    "styled-components": "^5.2.1",
+    "three": "^0.126.0",
+    "typescript": "^4.2.2",
     "use-global-hook": "^0.1.12",
     "zustand": "^2.2.2"
   },
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gcp-build": "npm run build",
+    "deploy": "gcloud app deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,11 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.19",
-    "@types/react-color": "^3.0.1",
-    "@types/styled-components": "^4.4.2",
+    "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
+    "@types/styled-components": "^5.1.7",
     "prettier": "^1.19.1",
-    "raw-loader": "^4.0.0",
-    "typescript": "^3.7.5"
+    "raw-loader": "^4.0.0"
   }
 }
