--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "baseUrl": "./",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowJs": true,
     "skipLibCheck": true,
