--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,18 +5,28 @@ jobs:
     name: Build and publish
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Install from cache first
+        uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: NPM Build
         run: |
-          npm install
+          yarn install
           npm run build
         env:
           CI: false
 
-      - uses: sebastianpopp/ftp-action@v2.0.0
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
         with:
-          host: 160.153.132.207
-          user: fpb@fantham.co.uk
-          password: ${{ secrets.FTP_PASSWORD }}
-          localDir: build
+          project_id: fpbioimage
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Deploy app to GCP
+        run: gcloud app deploy
