--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
     "@types/react-color": "^3.0.4",
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.9",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.5.4"
   }
 }
