--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@tweenjs/tween.js": "^18.6.4",
     "loti-request": "^0.6.0",
     "pngjs": "^6.0.0",
     "react": "^17.0.2",
