--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
+      - name: Setup Node 16 LTS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Install from cache first
         uses: actions/cache@v2
         with:
@@ -21,12 +26,16 @@ jobs:
         env:
           CI: false
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+      - name: Set up gCloud auth
+        uses: google-github-actions/auth@v1
         with:
           project_id: fpbioimage
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gCloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: fpbioimage
 
       - name: Deploy app to GCP
         run: npm run deploy
